Create start page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deep Space Homer</title>
     <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/start.css" />
   </head>
   <body>
-    
+    <main class="main">
+      <div class="img-container-homer">
+        <img src="./images/homer_chips.webp" alt="Homer following chips" class="img-homer-chips"/>
+      </div>
+      <div class="img-container-title">
+        <img src="./images/title.png" alt="Title Deep Space Homer" class="img-title" />
+      </div>
+      <div class="img-container-start">
+        <a href="./game.html">
+          <img src="./images/play.png" alt="Press play to start the game" class="img-start" />
+        </a>
+      </div>
+    </main>
 
     <script src="./js/main.js"></script>
   </body>
