Game header done

--- a/game.html
+++ b/game.html
@@ -7,7 +7,39 @@
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/game.css" />
   </head>
-  <body>
+  <body class="body">
+    <header class="header">
+      <div>
+        <div class="img-container-score">
+          <img
+            src="./images/potato-chips.png"
+            alt="Potato chips score"
+            class="img-score"
+          />
+          <p class="score">0</p>
+        </div>
+      </div>
+      <div class="container-title">
+        <a href="./index.html">
+        <img
+          src="./images/title.png"
+          alt="Title Deep Space Homer"
+          class="title-back"
+        />
+      </a>
+      </div>
+      <div class="container-timer">
+        <div class="img-container-timer">
+          <img
+            src="./images/carbon-rod.png"
+            alt="Carbon rod countdown timer"
+            class="img-timer"
+          />
+          <p class="timer">1:30</p>
+        </div>
+      </div>
+    </header>
+
     <script src="./js/main.js"></script>
   </body>
 </html>
