--- a/index.html
+++ b/index.html
@@ -7,20 +7,30 @@
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/start.css" />
   </head>
-  <body>
-    <main class="main">
-      <div class="img-container-homer">
-        <img src="./images/homer_chips.webp" alt="Homer following chips" class="img-homer-chips"/>
-      </div>
-      <div class="img-container-title">
-        <img src="./images/title.png" alt="Title Deep Space Homer" class="img-title" />
-      </div>
-      <div class="img-container-start">
-        <a href="./game.html">
-          <img src="./images/play.png" alt="Press play to start the game" class="img-start" />
-        </a>
-      </div>
-    </main>
+  <body class="body">
+    <div class="img-container-homer">
+      <img
+        src="./images/homer_chips.webp"
+        alt="Homer following chips"
+        class="img-homer-chips"
+      />
+    </div>
+    <div class="img-container-title">
+      <img
+        src="./images/title.png"
+        alt="Title Deep Space Homer"
+        class="img-title"
+      />
+    </div>
+    <div class="img-container-start">
+      <a href="./game.html">
+        <img
+          src="./images/play.png"
+          alt="Press play to start the game"
+          class="img-start"
+        />
+      </a>
+    </div>
 
     <script src="./js/main.js"></script>
   </body>
