--- a/game.html
+++ b/game.html
@@ -21,12 +21,12 @@
       </div>
       <div class="container-title">
         <a href="./index.html">
-        <img
-          src="./images/title.png"
-          alt="Title Deep Space Homer"
-          class="title-back"
-        />
-      </a>
+          <img
+            src="./images/title.png"
+            alt="Title Deep Space Homer"
+            class="title-back"
+          />
+        </a>
       </div>
       <div class="container-timer">
         <div class="img-container-timer">
@@ -39,6 +39,24 @@
         </div>
       </div>
     </header>
+
+    <main class="main">
+      <!-- És necessari que posi les tecles? La idea, al MVP, es que amb el teclat, vagi cap amunt i cap avall, potser no cal posar aquestes imatges... -->
+      <!-- <div class="keys">
+        <img src="./images/up.png" alt="Up key" class="up" />
+        <img src="./images/down.png" alt="Down key" class="down" />
+      </div> -->
+      <img src="./images/homer.png" alt="Homer Simpson" class="homer" />
+      <div class="chips">
+        <img src="./images/chip.png" alt="Chip" class="chip" />
+        <img src="./images/chip.png" alt="Chip" class="chip" />
+        <img src="./images/chip.png" alt="Chip" class="chip chip3" />
+        <img src="./images/chip.png" alt="Chip" class="chip" />
+        <img src="./images/chip.png" alt="Chip" class="chip" />
+      </div>
+    </main>
+
+    <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio>
 
     <script src="./js/main.js"></script>
   </body>
