Start game over banner

--- a/game.html
+++ b/game.html
@@ -35,7 +35,7 @@
             alt="Carbon rod countdown timer"
             class="img-timer"
           />
-          <p class="timer">1:30</p>
+          <p class="timer">1:45</p>
         </div>
       </div>
     </header>
@@ -55,6 +55,11 @@
         <img src="./images/chip.png" alt="Chip" class="chip" />
       </div>
     </main>
+
+    <div class="game-over">
+      <img src="./images/game-over.png" alt="Game Over title" class="game-over-title" />
+      <img src="./images/kang_and_kodos.webp" alt="Kang and Kodos" class="game-over-img" />
+    </div>
 
     <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio>
 
