Fix header space

--- a/game.html
+++ b/game.html
@@ -9,16 +9,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <div>
-        <div class="img-container-score">
-          <img
-            src="./images/potato-chips.png"
-            alt="Potato chips score"
-            class="img-score"
-          />
-          <p class="score">0</p>
-        </div>
-      </div>
+      <p class="score">0</p>
       <div class="container-title">
         <a href="./index.html">
           <img
@@ -28,16 +19,7 @@
           />
         </a>
       </div>
-      <div class="container-timer">
-        <div class="img-container-timer">
-          <img
-            src="./images/carbon-rod.png"
-            alt="Carbon rod countdown timer"
-            class="img-timer"
-          />
-          <p class="timer">1:45</p>
-        </div>
-      </div>
+      <p class="timer">1:45</p>
     </header>
 
     <main class="main">
@@ -57,8 +39,16 @@
     </main>
 
     <div class="game-over">
-      <img src="./images/game-over.png" alt="Game Over title" class="game-over-title" />
-      <img src="./images/kang_and_kodos.webp" alt="Kang and Kodos" class="game-over-img" />
+      <img
+        src="./images/game-over.png"
+        alt="Game Over title"
+        class="game-over-title"
+      />
+      <img
+        src="./images/kang_and_kodos.webp"
+        alt="Kang and Kodos"
+        class="game-over-img"
+      />
     </div>
 
     <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio>
