Finish game over banner

--- a/game.html
+++ b/game.html
@@ -45,6 +45,7 @@
         alt="Game Over title"
         class="game-over-title"
       />
+      <a href="./index.html" class="play-again">Play again</a>
       <img
         src="./images/kang_and_kodos.webp"
         alt="Kang and Kodos"
