Add js to countdown timer

--- a/game.html
+++ b/game.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/game.css" />
   </head>
+  
   <body class="body">
+
     <header class="header">
       <p class="score">0</p>
       <div class="container-title">
@@ -20,7 +22,7 @@
           />
         </a>
       </div>
-      <p class="timer">1:45</p>
+      <p class="timer">01:45</p>
     </header>
 
     <main class="main">
@@ -55,6 +57,7 @@
 
     <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio>
 
-    <script src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/timer.js"></script>
   </body>
 </html>
