--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       </a>
     </div>
 
-    <script src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/timer.js"></script>
   </body>
 </html>
