Add Game Over banner when timer is 0

--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
           />
         </a>
       </div>
-      <p class="timer">01:45</p>
+      <p class="timer"></p>
     </header>
 
     <main class="main">
@@ -41,7 +41,7 @@
       </div>
     </main>
 
-    <div class="game-over">
+    <div class="game-over hidden">
       <img
         src="./images/game-over.png"
         alt="Game Over title"
@@ -55,9 +55,10 @@
       />
     </div>
 
-    <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio>
+    <!-- <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio> -->
 
     <script type="text/javascript" src="./js/main.js"></script>
     <script type="text/javascript" src="./js/timer.js"></script>
+    <script type="text/javascript" src="./js/end.js"></script>
   </body>
 </html>
