Fix initial time

--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
           />
         </a>
       </div>
-      <p class="timer"></p>
+      <p class="timer">01:45</p>
     </header>
 
     <main class="main">
@@ -55,7 +55,7 @@
       />
     </div>
 
-    <!-- <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio> -->
+    <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio>
 
     <script type="text/javascript" src="./js/main.js"></script>
     <script type="text/javascript" src="./js/timer.js"></script>
