Add movement to chips

--- a/game.html
+++ b/game.html
@@ -32,13 +32,11 @@
         <img src="./images/down.png" alt="Down key" class="down" />
       </div> -->
       <img src="./images/homer.png" alt="Homer Simpson" class="homer" />
-      <div class="chips">
-        <img src="./images/chip.png" alt="Chip" class="chip" />
-        <img src="./images/chip.png" alt="Chip" class="chip" />
-        <img src="./images/chip.png" alt="Chip" class="chip chip3" />
-        <img src="./images/chip.png" alt="Chip" class="chip" />
-        <img src="./images/chip.png" alt="Chip" class="chip" />
-      </div>
+      <img src="./images/chip.png" alt="Potato chip" class="chip chip1" />
+      <img src="./images/chip.png" alt="Potato chip" class="chip chip2" />
+      <img src="./images/chip.png" alt="Potato chip" class="chip chip3" />
+      <img src="./images/chip.png" alt="Potato chip" class="chip chip4" />
+      <img src="./images/chip.png" alt="Potato chip" class="chip chip5" />
     </main>
 
     <div class="game-over hidden">
