Add movement to Homer when pressing key up and key down

--- a/game.html
+++ b/game.html
@@ -31,7 +31,7 @@
         <img src="./images/up.png" alt="Up key" class="up" />
         <img src="./images/down.png" alt="Down key" class="down" />
       </div> -->
-      <img src="./images/homer.png" alt="Homer Simpson" class="homer" />
+      <img src="./images/homer.png" alt="Homer Simpson" class="homer js-homer top3" />
       <img src="./images/chip.png" alt="Potato chip" class="chip chip1" />
       <img src="./images/chip.png" alt="Potato chip" class="chip chip2" />
       <img src="./images/chip.png" alt="Potato chip" class="chip chip3" />
@@ -53,10 +53,11 @@
       />
     </div>
 
-    <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio>
+    <!-- <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio> -->
 
     <script type="text/javascript" src="./js/main.js"></script>
     <script type="text/javascript" src="./js/timer.js"></script>
+    <script type="text/javascript" src="./js/keydown.js"></script>
     <script type="text/javascript" src="./js/end.js"></script>
   </body>
 </html>
