Trying to do checkCollision

--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
   <body class="body">
 
     <header class="header">
-      <p class="score">0</p>
+      <p class="score js-score">0</p>
       <div class="container-title">
         <a href="./index.html">
           <img
@@ -32,11 +32,11 @@
         <img src="./images/down.png" alt="Down key" class="down" />
       </div> -->
       <img src="./images/homer.png" alt="Homer Simpson" class="homer js-homer top3" />
-      <img src="./images/chip.png" alt="Potato chip" class="chip chip1" />
-      <img src="./images/chip.png" alt="Potato chip" class="chip chip2" />
-      <img src="./images/chip.png" alt="Potato chip" class="chip chip3" />
-      <img src="./images/chip.png" alt="Potato chip" class="chip chip4" />
-      <img src="./images/chip.png" alt="Potato chip" class="chip chip5" />
+      <img src="./images/chip.png" alt="Potato chip" class="chip chip1 js-chip1" />
+      <img src="./images/chip.png" alt="Potato chip" class="chip chip2 js-chip2" />
+      <img src="./images/chip.png" alt="Potato chip" class="chip chip3 js-chip3" />
+      <img src="./images/chip.png" alt="Potato chip" class="chip chip4 js-chip4" />
+      <img src="./images/chip.png" alt="Potato chip" class="chip chip5 js-chip5" />
     </main>
 
     <div class="game-over hidden">
@@ -53,11 +53,12 @@
       />
     </div>
 
-    <!-- <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio> -->
+    <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio>
 
     <script type="text/javascript" src="./js/main.js"></script>
     <script type="text/javascript" src="./js/timer.js"></script>
     <script type="text/javascript" src="./js/keydown.js"></script>
+    <script type="text/javascript" src="./js/collision.js"></script>
     <script type="text/javascript" src="./js/end.js"></script>
   </body>
 </html>
