Trying to do checkCollision part 2

--- a/game.html
+++ b/game.html
@@ -53,7 +53,7 @@
       />
     </div>
 
-    <!-- <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio> -->
+    <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio>
 
     <script type="text/javascript" src="./js/main.js"></script>
     <script type="text/javascript" src="./js/timer.js"></script>
