Stop counter and keydown when game is over

--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
     </header>
 
     <main class="main">
-      <!-- És necessari que posi les tecles? La idea, al MVP, es que amb el teclat, vagi cap amunt i cap avall, potser no cal posar aquestes imatges... -->
+      <!-- És necessari que posi les tecles? La idea, al MVP, es que amb el teclat, vagi cap amunt i cap avall, potser no cal posar aquestes imatges fins a la versió mobile... -->
       <!-- <div class="keys">
         <img src="./images/up.png" alt="Up key" class="up" />
         <img src="./images/down.png" alt="Down key" class="down" />
@@ -56,9 +56,5 @@
     <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio>
 
     <script type="text/javascript" src="./js/main.js"></script>
-    <script type="text/javascript" src="./js/timer.js"></script>
-    <script type="text/javascript" src="./js/keydown.js"></script>
-    <script type="text/javascript" src="./js/collision.js"></script>
-    <script type="text/javascript" src="./js/end.js"></script>
   </body>
 </html>
