Add crunch sound

--- a/game.html
+++ b/game.html
@@ -54,6 +54,7 @@
     </div>
 
     <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio>
+    <audio class="crunch-sound" src="./music/chip-crunch.mp3"></audio>
 
     <script type="text/javascript" src="./js/main.js"></script>
   </body>
