Add silence option

--- a/game.html
+++ b/game.html
@@ -33,6 +33,9 @@
       <img src="./images/chip.png" alt="Potato chip" class="chip chip4 js-chip4" />
       <img src="./images/chip.png" alt="Potato chip" class="chip chip5 js-chip5" />
     </main>
+    <footer>
+      <div class="volume js-volume"></div>
+    </footer>
 
     <div class="game-over hidden">
       <img
@@ -48,7 +51,7 @@
       />
     </div>
 
-    <audio src="./music/the-blue-danube-waltz.mp3" autoplay></audio>
+    <audio class="audio" src="./music/the-blue-danube-waltz.mp3" autoplay></audio>
     <audio class="crunch-sound" src="./music/chip-crunch.mp3"></audio>
 
     <script type="text/javascript" src="./js/main.js"></script>
